{
    "name": "DefautActionMap",
    "maps": [
        {
            "name": "Gameplay",
            "id": "99f86eaa-a5b3-4fb5-91d2-000a2f0aea4c",
            "actions": [
                {
                    "name": "MoveOrAttack",
                    "type": "Button",
                    "id": "2e212310-ee7d-474c-9268-190a59fba8bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Choose",
                    "type": "Button",
                    "id": "15abe4b7-acb6-46c6-a3d5-9e0fb57a4f56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockCamera",
                    "type": "Button",
                    "id": "04035d1d-629c-4f86-bc62-0e259353f01e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "bd7bc679-e27c-456e-a85b-b5098e93e72b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "b4d5a58e-6f33-4ca6-918c-fea9127f1175",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc43bf69-7284-4004-9283-0c42de0fc271",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveOrAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e09f6a8-ba42-4f03-8ce2-f1145f811cec",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Choose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d391dce-f2a2-4f6f-bfe6-540757a62182",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LockCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "467b6934-2741-4247-b9a0-4a228aa7fe35",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dfa21ee-0cdd-461b-9bed-918e46a28db8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}